; ModuleID = '/home/carl/AnghaBench/php-src/ext/ffi/extr_ffi_parser.c_parse.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/ffi/extr_ffi_parser.c_parse.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@yy_buf = common dso_local global i32 0, align 4
@yy_text = common dso_local global i32 0, align 4
@yy_pos = common dso_local global i32 0, align 4
@yy_line = common dso_local global i32 0, align 4
@YY_EOF = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [20 x i8] c"<EOF> expected, got\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @parse to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @parse() #0 {
  %1 = alloca i32, align 4
  %2 = load i32, i32* @yy_buf, align 4
  store i32 %2, i32* @yy_text, align 4
  store i32 %2, i32* @yy_pos, align 4
  store i32 1, i32* @yy_line, align 4
  %3 = call i32 (...) @get_sym()
  %4 = call i32 @parse_declarations(i32 %3)
  store i32 %4, i32* %1, align 4
  %5 = load i32, i32* %1, align 4
  %6 = load i32, i32* @YY_EOF, align 4
  %7 = icmp ne i32 %5, %6
  br i1 %7, label %8, label %11

8:                                                ; preds = %0
  %9 = load i32, i32* %1, align 4
  %10 = call i32 @yy_error_sym(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str, i64 0, i64 0), i32 %9)
  br label %11

11:                                               ; preds = %8, %0
  ret void
}

declare dso_local i32 @parse_declarations(i32) #1

declare dso_local i32 @get_sym(...) #1

declare dso_local i32 @yy_error_sym(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
